@@ -342,7 +342,12 @@ pt-BR:
   facebook: Facebook
   linked_in: LinkedIn
   myself: Eu
-  permissions_intro: Por padrão somente você terá acesso a {{value}}. Você pode mudar as permissões depois.
+
+  # TODO
+  permissions_intro_private: By default only you will have access to the {{value}}. You can change permissions later.  
+  permissions_intro_public: By default all users will have access to the {{value}}. You can change permissions later.
+  permissions_intro_shared: By default only the selected users will have access to the {{value}}. You can change permissions later.
+
   referred_by: Referred by
   referred_by_small: referred by
   save_contact: Salvar contato
@@ -353,29 +358,34 @@ pt-BR:
 
   # Views -> Leads.
   #----------------------------------------------------------------------------
-  leads: Leads
-  lead: Lead
-  lead_small: lead
-  leads_small: leads
-  create_lead: Novo lead
-  save_lead: Salvar lead
-  leads_options: Opções de Lead
   convert: Converter
-  reject: Rejeitar
-  status: Situação
-  source: Origem
-  rating: Rating
-  lead_info_small: contato do lead
-  lead_status_small: situação do lead
-  lead_permissions_intro: Por padrão, as permissões serão copiadas da campanha ou serão privadas. Você pode mudar as permissões do lead depois.
-  create_opp_for_contact: Você pode opcionalmente criar uma oportunidade para o contato {{value}}  especificando o nome, fase atual, data estimada de fechamento, probabilidade de venda, valor do acordo, e o desconto oferecido.
   convert_lead: Converter lead
-  convert_lead_text: By converting the lead {{value}} will become a contact associated with the existing or newly created account. Lead status will be automatically set to converted.
   convert_lead_permissions_intro: Contact permissions will be copied from the lead being converted. You can change contact permissions later.
-  total_leads: Total de leads
+  convert_lead_text: By converting the lead {{value}} will become a contact associated with the existing or newly created account. Lead status will be automatically set to converted.
+  create_lead: Novo lead
+  create_opp_for_contact: Você pode opcionalmente criar uma oportunidade para o contato {{value}}  especificando o nome, fase atual, data estimada de fechamento, probabilidade de venda, valor do acordo, e o desconto oferecido.
+  lead: Lead
+  lead_info_small: contato do lead
+
+  # TODO
+  lead_permissions_intro_private: By default permissions will be copied from the campaign or set to private. You can change lead permissions later.
+  lead_permissions_intro_public: By default permissions will be copied from the campaign or set to public. You can change lead permissions later.  
+  lead_permissions_intro_shared: By default permissions will be copied from the campaign or shared with the specified users. You can change lead permissions later.  
+
+  lead_small: lead
+  lead_status_small: situação do lead
   lead_summary: Lead Summary
-  reject_lead_confirm: Tem certeza que deseja rejeitar este lead?
+  leads: Leads
+  leads_options: Opções de Lead
+  leads_small: leads
   none: Nenhum
+  rating: Rating
+  reject: Rejeitar
+  reject_lead_confirm: Tem certeza que deseja rejeitar este lead?
+  save_lead: Salvar lead
+  source: Origem
+  status: Situação
+  total_leads: Total de leads
 
   # Views -> Opportunities.
   #----------------------------------------------------------------------------
