@@ -342,6 +342,12 @@ ru:
   facebook: Вконтакте
   linked_in: Одноклассники
   myself: Мне
+
+  # TODO
+  permissions_intro_private: By default only you will have access to the {{value}}. You can change permissions later.  
+  permissions_intro_public: By default all users will have access to the {{value}}. You can change permissions later.
+  permissions_intro_shared: By default only the selected users will have access to the {{value}}. You can change permissions later.
+
   permissions_intro: При создании только Вы получаете доступ к {{value}}ам. Права доступа можно изменить в любое время.
   referred_by: По рекомендации
   referred_by_small: по рекомендации
@@ -361,7 +367,12 @@ ru:
   create_opp_for_contact: Вы можете создать возможность, привязанную к контакту &laquo;{{value}}&raquo;, введя в следующих полях название возможности, стадию, предполагаему дату завершения, вероятность продажи, сумма сделки и предлагаемую скидку.
   lead: Потенциальный клиент
   lead_info_small: Контактная информация потенциального клиента
-  lead_permissions_intro: По умолчанию, права доступа будут скопированы от рекламной кампании или установлено "Не показывать никому". Вы сможете изменить права доступа позже.
+
+  # TODO
+  lead_permissions_intro_private: By default permissions will be copied from the campaign or set to private. You can change lead permissions later.
+  lead_permissions_intro_public: By default permissions will be copied from the campaign or set to public. You can change lead permissions later.  
+  lead_permissions_intro_shared: By default permissions will be copied from the campaign or shared with the specified users. You can change lead permissions later.  
+
   lead_small: потенциальный клиент
   lead_status_small: Статус потенциального клиента
   lead_summary: Информация о потенциальном клиенте
