@@ -342,6 +342,12 @@ th:
   facebook: Facebook
   linked_in: LinkedIn
   myself: ตัวฉัน
+
+  # TODO
+  permissions_intro_private: By default only you will have access to the {{value}}. You can change permissions later.  
+  permissions_intro_public: By default all users will have access to the {{value}}. You can change permissions later.
+  permissions_intro_shared: By default only the selected users will have access to the {{value}}. You can change permissions later.
+
   permissions_intro: เบื้องต้นจะมีเฉพาะคุณเท่านั้นที่เห็น {{value}} แต่สามารถเปลี่ยนได้ในภายหลัง
   referred_by: แนะนำโดย
   referred_by_small: แนะนำโดย
@@ -361,7 +367,12 @@ th:
   create_opp_for_contact: คุณสามารถสร้าง โอกาศปิดการขาย สำหรับ {{value}} ผู้ติดต่อ โดยกำหนดชื่อ สถานะปัจจุบัน คาดการวันปิด โอกาสปิดการขาย มูลค่า และส่วนลด
   lead: ผู้สนใจ
   lead_info_small: ที่อยู่ผู้สนใจ
-  lead_permissions_intro: ในเบื้องต้นสิทธิ์จะถูกนำไปใช้ในแคมเปณ หรือกำหนดเป็นดูได้คนเดียว แต่สามารถเปลี่ยนได้ในภายหลัง
+
+  # TODO
+  lead_permissions_intro_private: By default permissions will be copied from the campaign or set to private. You can change lead permissions later.
+  lead_permissions_intro_public: By default permissions will be copied from the campaign or set to public. You can change lead permissions later.  
+  lead_permissions_intro_shared: By default permissions will be copied from the campaign or shared with the specified users. You can change lead permissions later.  
+
   lead_small: ผู้สนใจ
   lead_status_small: สถานะของผู้สนใจ
   lead_summary: สรุปผู้สนใจ
